@@ -1,15 +1,15 @@
 Package: DiffBind
 Type: Package
-Version: 1.9.4
+Version: 1.9.5
 Title: Differential Binding Analysis of ChIP-Seq peak data
-Date: 2013-10-17
+Date: 2013-11-14
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gordon Brown <gordon.brown@cruk.cam.ac.uk>
 Maintainer: Rory Stark<rory.stark@cruk.cam.ac.uk>
 Description: Compute differentially bound sites from multiple ChIP-seq experiments using affinity (quantitative) data. Also enables occupancy (overlap) analysis and plotting functions.
 biocViews: Bioinformatics, HighThroughputSequencing, ChIPseq
 License: Artistic-2.0
 LazyLoad: yes
-Depends: R (>= 2.15.0), GenomicRanges
+Depends: R (>= 2.15.0), GenomicRanges, limma
 Imports: RColorBrewer, amap, edgeR (>= 2.3.58), gplots, grDevices,
         stats, utils, IRanges, zlibbioc
 Suggests: DESeq, Rsamtools, DESeq2
